cmake_minimum_required(VERSION 3.8)
project(hello_world)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        src/main.rs
        target/debug/deps/hello_world-3b0806fa22f5dcb7.dSYM/Contents/Resources/DWARF/hello_world-3b0806fa22f5dcb7
        target/debug/deps/hello_world-3b0806fa22f5dcb7.dSYM/Contents/Info.plist
        target/debug/deps/hello_world-d4ca1e1cc6fc360a.dSYM/Contents/Resources/DWARF/hello_world-d4ca1e1cc6fc360a
        target/debug/deps/hello_world-d4ca1e1cc6fc360a.dSYM/Contents/Info.plist
        target/debug/deps/hello_world-3b0806fa22f5dcb7
        target/debug/deps/hello_world-3b0806fa22f5dcb7.d
        target/debug/deps/hello_world-d4ca1e1cc6fc360a
        target/debug/deps/hello_world-d4ca1e1cc6fc360a.d
        target/debug/hello-world.dSYM/Contents/Resources/DWARF/hello_world-d4ca1e1cc6fc360a
        target/debug/hello-world.dSYM/Contents/Info.plist
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw-2t504dpspgl5k/1y16o1qfye96o7m0.o
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw-2t504dpspgl5k/236iz806sghm3wx.o
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw-2t504dpspgl5k/2f0hry2t7c05ttdi.o
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw-2t504dpspgl5k/3ff08c0u0kk7cb3j.o
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw-2t504dpspgl5k/3ldk0i2zxftngav8.o
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw-2t504dpspgl5k/3rngp6bm2u2q5z0y.o
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw-2t504dpspgl5k/49a7n47po4ttqjl7.o
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw-2t504dpspgl5k/4xq48u46a1pwiqn7.o
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw-2t504dpspgl5k/4yh8x2b62dcih00t.o
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw-2t504dpspgl5k/4ypvbwho0bu5tnww.o
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw-2t504dpspgl5k/8xzrsc1ux72v29j.o
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw-2t504dpspgl5k/98g0d9x8aw3akpe.o
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw-2t504dpspgl5k/9elsx31vb4it187.o
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw-2t504dpspgl5k/dep-graph.bin
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw-2t504dpspgl5k/query-cache.bin
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw-2t504dpspgl5k/work-products.bin
        target/debug/incremental/hello_world-2cgzr8x466gwl/s-ezc8ps2oyf-1b37wyw.lock
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/1im38lueib99jsk0.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/1mvmz58owquyropc.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/1y16o1qfye96o7m0.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/1zwd8n7bcl3vhvvh.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/23tqyymcb18u96mb.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/2kjrmm4fe2aha78f.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/2lyh15q6cjwzy18c.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/3ayaeypdcro9d6yk.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/3ff08c0u0kk7cb3j.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/3rngp6bm2u2q5z0y.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/45nf4z58qqykpcpi.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/48721dc4k5qxei0u.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/49a7n47po4ttqjl7.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/4b8ptp1vn215jmoe.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/4jdnq7xfjeka1bt.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/4ybye971cqflgun6.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/4yh8x2b62dcih00t.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/4ypvbwho0bu5tnww.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/9elsx31vb4it187.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/dep-graph.bin
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/kt25z0521ngsjub.o
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/query-cache.bin
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p-2a1tilfs4ngog/work-products.bin
        target/debug/incremental/hello_world-3gks9kda4flaf/s-ezc6y32xkv-1pte94p.lock
        target/debug/hello-world
        target/debug/hello-world.d
        target/release/deps/hello_world-0aefaf8da73f64bf
        target/release/deps/hello_world-0aefaf8da73f64bf.d
        target/release/hello-world
        target/release/hello-world.d
        Cargo.lock
        Cargo.toml
        hello-world.iml)

add_executable(hello_world ${SOURCE_FILES})